[package]
name = "dataglass"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.27.0"
rodio = "0.19.0"
reqwest = { version = "0.12.5" }
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
rss = "2.0.8"
stream-download = "0.7.1"
ratatui-image = "1.0.5"
tui-scrollview = "0.3.12"
tachyonfx = "0.4.0"
